--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,18 @@
 [submodule "pack/colors/opt/onedark.vim"]
 	path = pack/colors/opt/onedark.vim
 	url = https://github.com/joshdick/onedark.vim.git
+[submodule "pack/syntax/start/ctrlp.vim"]
+	path = pack/syntax/start/ctrlp.vim
+	url = https://github.com/kien/ctrlp.vim.git
+[submodule "pack/syntax/start/delimitMate"]
+	path = pack/syntax/start/delimitMate
+	url = https://github.com/Raimondi/delimitMate.git
+[submodule "pack/syntax/start/vim-expand-region"]
+	path = pack/syntax/start/vim-expand-region
+	url = https://github.com/terryma/vim-expand-region.git
+[submodule "pack/syntax/start/vim-speeddating"]
+	path = pack/syntax/start/vim-speeddating
+	url = https://github.com/tpope/vim-speeddating.git
+[submodule "pack/syntax/start/vim-surround"]
+	path = pack/syntax/start/vim-surround
+	url = https://github.com/tpope/vim-surround.git
