--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,33 @@
 [submodule "pack/syntax/start/vim-surround"]
 	path = pack/syntax/start/vim-surround
 	url = https://github.com/tpope/vim-surround.git
+[submodule "pack/plugins/start/vim-windowswap"]
+	path = pack/plugins/start/vim-windowswap
+	url = https://github.com/wesQ3/vim-windowswap.git
+[submodule "pack/plugins/start/MatchTagAlways"]
+	path = pack/plugins/start/MatchTagAlways
+	url = https://github.com/Valloric/MatchTagAlways.git
+[submodule "pack/plugins/start/ale"]
+	path = pack/plugins/start/ale
+	url = https://github.com/dense-analysis/ale.git
+[submodule "pack/plugins/start/vim-fugitive"]
+	path = pack/plugins/start/vim-fugitive
+	url = https://github.com/tpope/vim-fugitive.git
+[submodule "pack/plugins/start/vim-airline"]
+	path = pack/plugins/start/vim-airline
+	url = https://github.com/vim-airline/vim-airline.git
+[submodule "pack/plugins/start/vim-airline-themes"]
+	path = pack/plugins/start/vim-airline-themes
+	url = https://github.com/vim-airline/vim-airline-themes.git
+[submodule "pack/plugins/start/vim-dispatch"]
+	path = pack/plugins/start/vim-dispatch
+	url = https://github.com/tpope/vim-dispatch.git
+[submodule "pack/plugins/start/vim-gitgutter"]
+	path = pack/plugins/start/vim-gitgutter
+	url = https://github.com/airblade/vim-gitgutter.git
+[submodule "pack/plugins/start/vim-lastplace"]
+	path = pack/plugins/start/vim-lastplace
+	url = https://github.com/farmergreg/vim-lastplace.git
+[submodule "pack/plugins/start/vim-polyglot"]
+	path = pack/plugins/start/vim-polyglot
+	url = https://github.com/sheerun/vim-polyglot.git
